--- a/style.css
+++ b/style.css
@@ -10,6 +10,14 @@
 }
 
 /* ---------------------------------------------------------------------- */
+/* * HTML & BODY RESETS FOR FULL HEIGHT * */
+/* ---------------------------------------------------------------------- */
+html {
+  /* This is necessary for body { height: 100%; } to work */
+  height: 100%;
+}
+
+/* ---------------------------------------------------------------------- */
 /* * CSS Custom Properties (Variables) defined on the highest level */
 /* ---------------------------------------------------------------------- */
 :root {
@@ -77,7 +85,8 @@ body {
   color: var(
     --main-text-color
   ); /* * Default text color for Light DOM content */
-  overflow: hidden;
+  height: 100%;
+  width: 100%;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   margin: 0px;
   padding: 0px;
